# qwen3-vl-autotagger-cli

./: .gitignore  CHANGELOG.md  Colab_T4_CLI_Diagnostic.ipynb  Colab_T4_CLI_Prod.ipynb  LICENSE  README.md  install.py  pyproject.toml  requirements.txt  setup_github.ps1
qwen3_vl_autotagger_cli/: __init__.py  __main__.py  cli.py  core.py
